# RiceShare

./: README.md  pyproject.toml  readme.md
riceshare/: __init__.py  backup.py  cli.py  config.py  github.py  installer.py  packages.py  utils.py
